--- a/CSS/style.css
+++ b/CSS/style.css
@@ -7,14 +7,44 @@ header{
     background-image: url(../IMG/background.jpg);
     color: white;
 }
-header .haut {
-    /*Mbola tedavina e*/
+header a{
+    text-decoration: none;
+    color: white;
+}
+header .haut{
+    background-color: gray;
+}
+header .haut a:hover{
+    text-decoration: underline;
+    color: rgb(228, 13, 13);
 }
 header .haut ul li{
     list-style: none;
 }
-header ul li a{
-    text-decoration: none;
-    color: white;
+/* Modification de la banniere */
+header section.banniere{
+    width: 40%;
+    padding: 10% 3%;
 }
-                                        /*dv,dkvzlvzj,*/
+section.banniere .big{
+    margin:5% 0;
+}
+section.banniere .big h2{
+    font-size: 32px;
+}
+section.banniere h2 b{
+    color: rgb(228, 13, 13);
+    font-size: 28px;
+    font-weight: 700;
+}
+.banniere p{
+    font-size: 15px;
+}
+.contact_banniere {
+    margin: 5% 0%;
+}
+.banniere a{
+    border-radius: 15px;
+    padding: 1% 3%;
+    background-color: rgb(228, 13, 13);
+}
